--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -19,7 +19,7 @@
                 <textarea id="sonum" rows="4" cols="60"></textarea><br><br>
                 <input id="saada" type="submit"> 
             </form>                
-    <div> siin on kontakt</div>
+    </div>
     <script src="/scripts/contact.js"></script>
 </body>
 
