--- a/views/pages/treks.ejs
+++ b/views/pages/treks.ejs
@@ -25,6 +25,7 @@
                                 %>
                                 target="_blank"><%= matkad[i].locationDescription %></a>
                         </div>
+                        <a href=<%=`treks/${matkad[i].id}`%> class="btn btn-dark matka-nupp">Osalen matkal</a>
                     </div>
                 <% } %>
             </div>
