--- a/views/pages/news.ejs
+++ b/views/pages/news.ejs
@@ -10,7 +10,7 @@
 
     <div class="container-fluid pais-sektsioon">
         <%- include ("../partials/nav.ejs") %>
-            <div> siin on uudised</div>
+            <div> siia tulevad uudised</div>
     </div>
 </body>
 
