--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -21,6 +21,7 @@
             </form>                
     </div>
     <script src="/scripts/contact.js"></script>
+    <%- include ("../partials/aluminenav.ejs") %>
 </body>
 
 </html>
