--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,6 @@
 </head>
 
 <body>
-
   
   <div class="">
     <div class="container-fluid pais-sektsioon">
@@ -32,18 +31,16 @@
                 aliqua. Quis ipsum su spendisse ultrices
                 gravida. Risus commodo viverra maec
                 enas accumsan lacus vel facilisis.
-            </h3>
-            
+            </h3>            
                             
             <div class="binokliga2"></div>
             <div class="binokliga1"></div>
             <div class="kaardivaatajad"></div>
             <div class="vari3"></div>
         </div>
-    </div>
-    
-</div>    
-
+    </div>    
+        
+    <%- include ("../partials/aluminenav.ejs") %>
 
 </body>
 </html>
